2003-03-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (HandleEvents):
	fixed core dump

2003-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (check_in_window):
	* FvwmIconMan/winlist.c (figure_win_manager):
	(check_resolution):
	* FvwmIconMan/fvwm.c (win_in_viewport):
	In FvwmIconMan, windows can move from one manager to another acoording
	to the managers' Resolution options.

2003-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/fvwm.c (set_win_configuration):
	fix for drawing the focused window upon page change
	(win_in_viewport):

	* FvwmButtons/FvwmButtons.c (Loop):
	(SetTransparentBackground):
	Fixed FvwmButtons transparency

2003-03-01  Dan Espen  <dane@mk.telcordia.com>

	* FvwmPager/x_pager.c (ReConfigure): Fix so Pager correctly draws active
	desktop highlight when desktopsize changes.

2003-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.1:
	man page corrections

2003-02-25  Dan Espen  <dane@mk.telcordia.com>

	* FvwmAuto/FvwmAuto.c (main): Remove bad debug code.

2003-02-23  Dan Espen  <dane@mk.telcordia.com>

	* FvwmPager/x_pager.c (Scroll): Fix pointer centering when returning on
	a drag from right or bottom.

2003-02-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmPager/x_pager.c (Scroll): Fix virtual screen offset calc.

2003-02-16  Dan Espen  <dane@mk.telcordia.com>

	* FvwmPager/x_pager.c (DispatchEvent): Fix compilation problems caused
	by last minute cleanup.

2003-02-15  Dan Espen  <dane@mk.telcordia.com>

	* FvwmPager/x_pager.c (Scroll): Fix Pager going crazy on a button 3
	drag.

2003-02-13  olicha  <olivier.chapuis@free.fr>

	* FvwmButtons/draw.c (RedrawButton):
	Applied Remko Troncon negative frame fix

2003-02-05  Jason Weber  <baboon@imonk.com>

	* FvwmProxy/FvwmProxy.c:
	undefined actions now default to Nop instead of crashing
	windowname update now mostly ignored since we only display iconname
	iconname update now just redraws one window instead of reseting